--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -5,6 +5,8 @@
 add_library(tasmet_gui
   mainwindow.cpp
   add_duct_dialog.cpp
+  add_ductbc_dialog.cpp
+  about_dialog.cpp
   )
 
 target_link_libraries(tasmet_gui qcustomplot)
