Almost finished solver. Plot update needs to run in main thread. Use signaling for progress

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(tasmet_gui
   add_duct_dialog.cpp
   add_ductbc_dialog.cpp
   about_dialog.cpp
+  solver_dialog.cpp
+  solver_worker.cpp
   )
 
 target_link_libraries(tasmet_gui qcustomplot)
