Now working on solving models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,5 +131,6 @@ add_subdirectory(src)
 add_subdirectory(testing)
 
 add_executable(tasmet src/main.cpp src/gui/tasmet_resources.qrc)
+add_executable(tasmet_solvemodel src/tasmet_solvemodel.cpp)
 target_link_libraries(tasmet tasmet_gui tasmet_src messages PythonQt Qt5::Widgets openblas)
-
+target_link_libraries(tasmet_solvemodel tasmet_src messages PythonQt openblas)
